add_sources_to_yandasoft(
CalibParamsMEAdapter.cc
CalibrationApplicatorME.cc
CalibrationIterator.cc
CalibrationMEBase.cc
CalibrationSolutionHandler.cc
Calibrator1934.cc
ComponentEquation.cc
GaussianNoiseME.cc
GaussianTaperCache.cc
GaussianTaperPreconditioner.cc
GenericMultiChunkEquation.cc
IComponent.cc
IImagePreconditioner.cc
IMeasurementEquation.cc
IUnpolarizedComponent.cc
IVisCubeUpdate.cc
ImageAMSMFSolver.cc
ImageBasisFunctionSolver.cc
ImageCleaningSolver.cc
ImageDFTEquation.cc
ImageFFTEquation.cc
ImageFistaSolver.cc
ImageMSMFSolver.cc
ImageMultiScaleSolver.cc
ImageParamsHelper.cc
ImageRestoreSolver.cc
ImageSolver.cc
ImageSolverFactory.cc
ImagingEquationAdapter.cc
ImagingMultiChunkEquation.cc
MEParsetInterface.cc
MultiChunkEquation.cc
NormWienerPreconditioner.cc
NormalEquationsTypeError.cc
PreAvgCalBuffer.cc
PreAvgCalMEBase.cc
PreAvgDDCalBuffer.cc
PreAvgDDCalMEBase.cc
RestoringBeamHelper.cc
RobustPreconditioner.cc
SumOfTwoMEs.cc
SynthesisParamsHelper.cc
UnpolarizedGaussianSource.cc
UnpolarizedPointSource.cc
VisMetaDataStats.cc
VoidMeasurementEquation.cc
WienerPreconditioner.cc
)

install (FILES
BlockCDMOperations.h
BlockCDMOperations.tcc
BeamIndependentLeakageTerm.h
BeamIndependentLeakageTerm.tcc
CalibParamsMEAdapter.h
CalibrationApplicatorME.h
CalibrationIterator.h
CalibrationME.h
CalibrationMEBase.h
CalibrationSolutionHandler.h
Calibrator1934.h
ComponentEquation.h
ContourFinder.h
ContourFinder.tcc
GaussianNoiseME.h
GaussianTaperCache.h
GaussianTaperPreconditioner.h
GenericMultiChunkEquation.h
ICalibrationApplicator.h
IComponent.h
IImagePreconditioner.h
IMeasurementEquation.h
IParameterizedComponent.h
IUnpolarizedComponent.h
IVisCubeUpdate.h
IdentityComponent.h
Image2DConvolver.h
Image2DConvolver.tcc
ImageAMSMFSolver.h
ImageBasisFunctionSolver.h
ImageCleaningSolver.h
ImageConvolver.h
ImageConvolver.tcc
ImageDFTEquation.h
ImageFFTEquation.h
ImageFistaSolver.h
ImageMSMFSolver.h
ImageMultiScaleSolver.h
ImageParamsHelper.h
ImageRestoreSolver.h
ImageSolver.h
ImageSolverFactory.h
ImagingEquationAdapter.h
ImagingMultiChunkEquation.h
LeakageTerm.h
LeakageTerm.tcc
MEComponent.h
MEParsetInterface.h
MultiChunkEquation.h
NoXPolBeamIndependentGain.h
NoXPolBeamIndependentGain.tcc
NoXPolFreqDependentGain.h
NoXPolFreqDependentGain.tcc
NoXPolGain.h
NoXPolGain.tcc
NormWienerPreconditioner.h
NormalEquationsTypeError.h
ParameterizedComponent.h
ParameterizedMEComponent.h
ParameterizedMEComponent.tcc
PreAvgCalBuffer.h
PreAvgCalMEBase.h
PreAvgDDCalBuffer.h
PreAvgDDCalMEBase.h
Product.h
RestoringBeamHelper.h
RobustPreconditioner.h
Sum.h
SumOfTwoMEs.h
SynthesisParamsHelper.h
UnpolarizedComponent.h
UnpolarizedGaussianSource.h
UnpolarizedPointSource.h
VectorOperations.h
VisMetaDataStats.h
VoidMeasurementEquation.h
WienerPreconditioner.h
ZeroComponent.h
DESTINATION include/askap/measurementequation
)
